[package]
name = "gcm"
version = "0.1.0"
authors = ["Suvish Varghese Thoovamalayil <vishy1618@gmail.com>"]
description = "An API to talk to GCM (Google Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/vishy1618/gcm"
repository = "https://github.com/vishy1618/gcm"
documentation = "https://doc.rust-lang.org/gcm"

[dependencies]
rustc-serialize = "*"
curl = "*"