[package]
name = "gcm"
version = "0.1.5"
authors = ["Suvish Varghese Thoovamalayil <vishy1618@gmail.com>"]
description = "An API to talk to GCM (Google Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/vishy1618/gcm"
repository = "https://github.com/vishy1618/gcm"
documentation = "http://vishy1618.github.io/gcm/gcm/"
keywords = ["gcm", "cloud", "messaging", "android", "ios"]

[dependencies]
rustc-serialize = "^0.3"
hyper = "^0.9"

