[package]
name = "gcm"
version = "0.2.0"
authors = ["Suvish Varghese Thoovamalayil <vishy1618@gmail.com>"]
description = "An API to talk to GCM (Google Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/vishy1618/gcm"
repository = "https://github.com/vishy1618/gcm"
documentation = "http://vishy1618.github.io/gcm/gcm/"
keywords = ["gcm", "cloud", "messaging", "android", "ios"]

[dependencies]
hyper = "^0.10"
hyper-native-tls = "^0.2"
serde = "1.0.7"
serde_derive = "1.0.7"
serde_json = "1.0.2"